[package]
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Audio playback library"
documentation = "http://docs.rs/rodio"
keywords = [
    "audio",
    "playback",
    "gamedev",
]
license = "MIT/Apache-2.0"
name = "rodio"
repository = "https://github.com/tomaka/rodio"
version = "0.8.1"

[dependencies]
cgmath = "0.17"
lazy_static = "1.0.0"
parking_lot = "0.7.1"

[dependencies.claxon]
optional = true
version = "0.4.1"

[dependencies.cpal]
branch = "optimization/poll_relevant_events_only"
git = "https://github.com/o0Ignition0o/cpal"

[dependencies.hound]
optional = true
version = "3.3.1"

[dependencies.lewton]
optional = true
version = "0.9"

[dependencies.minimp3]
optional = true
version = "0.3.2"

[features]
default = [
    "flac",
    "vorbis",
    "wav",
    "mp3",
]
flac = ["claxon"]
mp3 = ["minimp3"]
vorbis = ["lewton"]
wav = ["hound"]
